@@ -835,6 +835,13 @@ static void _pty_restore(void)
 /* opt.exclusive is set, disable user task layout controls */
 static void _step_opt_exclusive(void)
 {
+	if (opt.nodes_set) {
+		verbose("ignoring node count set by --nodes or SLURM_NNODES");
+		verbose("  it is incompatible with --exclusive");
+		opt.nodes_set = false;
+		opt.min_nodes = 1;
+		opt.max_nodes = 0;
+	}
 	if (!opt.nprocs_set)
 		fatal("--nprocs must be set with --exclusive");
 	if (opt.relative_set)
