@@ -6,6 +6,7 @@ documents those changes that are of interest to users and admins.
  -- Add support for configurable number of jobs to share resources using the 
     partition Shared parameter in slurm.conf (e.g. "Shared=FORCE:3" for two 
     jobs to share the resources). From Chris Holmes, HP.
+ -- Fix a bug in the processing of srun's --exclusive option for a job step.
 
 * Changes in SLURM 1.3.0-pre5
 =============================
